# ComputerGrafics

assignment_1/asteroids/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  game_test  geometry_test  main_game  math_test  physics.h  physics_test  sdl2_renderer.cc
assignment_1/geometry/: Makefile  cmake_install.cmake  geometry_test
assignment_1/math/: CMakeCache.txt  Makefile  cmake_install.cmake
assignment_2/raytracer/: CMakeCache.txt  CMakeLists.txt  Makefile  Raytracer_Renderer.cc  Raytracer_Renderer.h  cmake_install.cmake  geometry.tcc  math.tcc  output.ppm  raytracer  raytracer.cc  test.ppm
assignment_3/asteroids_opengl/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  Torpedo.mtl  UFO.mtl  cmake_install.cmake  comet.mtl  debrees.mtl  game_test  geometry copy.h  geometry_test  main_game  main_game.cc  math.tcc  math_test  matrix.tcc  matrix_test  matrix_test.cc  opengl_renderer.cc  physics_test  sdl2_renderer.cc  wavefront_test
assignment_3/matrix/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  math.h  math.tcc  math_test  matrix.tcc  matrix_test
assignment_3/viewer/: CMakeCache.txt  Makefile  cmake_install.cmake  icosahedron.mtl  viewer  viewer.cc  wavefront_test
asteroids/: Makefile  game_test  geometry_test  main_game  math.tcc  math_test  physics_test  sdl2_renderer.cc
geometry/: CMakeCache.txt  CMakeLists.txt  Makefile
math/: math_test  math_test.cc
